force-app/main/default/objects/Actual_Burndown_Week__c/Actual_Burndown_Week__c.object-meta.xml
<CustomObject>
    <label>Actual Burndown Week</label>
    <nameField>
        <displayFormat>ABW-{000000}</displayFormat>
        <label>Actual Burndown Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Burndown Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>