force-app/main/default/objects/Actual_Burndown_Week__c/fields/Remaining_Stories__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Stories__c</fullName>
    <label>Remaining Stories</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>