force-app/main/default/objects/Actual_Burndown_Week__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Date</type>
</CustomField>